# micrograd-rs

./: Cargo.toml  README.md
examples/: draw_demo.rs  nn_demo.rs
src/: engine.rs  nn.rs
